--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ mdurl==0.1.2
 platformdirs==4.3.6
 Pygments==2.19.1
 requests==2.32.3
+rich==13.9.4
 textual==1.0.0
 typing_extensions==4.12.2
 uc-micro-py==1.0.3
