--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+anyio==4.8.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
+exceptiongroup==1.2.2
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
 linkify-it-py==2.0.3
 markdown-it-py==3.0.0
@@ -7,8 +12,8 @@ mdit-py-plugins==0.4.2
 mdurl==0.1.2
 platformdirs==4.3.6
 Pygments==2.19.1
-requests==2.32.3
 rich==13.9.4
+sniffio==1.3.1
 textual==1.0.0
 typing_extensions==4.12.2
 uc-micro-py==1.0.3
